# SealBot

./: README.md  pyproject.toml
sealbot/: bot.py  main.py  settings.py
