[tool.poetry]
name = "sealbot"
version = "0.1.0"
description = "A Discord bot centered around seals :3"
authors = ["june349"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
pydantic-extra-types = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.387"
ruff = "^0.7.2"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
